[gd_scene load_steps=31 format=3 uid="uid://blfoq37340ias"]

[ext_resource type="Script" uid="uid://coffugoc6awgg" path="res://scenes/enemy.gd" id="1_55jtl"]
[ext_resource type="Texture2D" uid="uid://jcxvmlme4mhg" path="res://Assets/Game Main Assets/Enemy/Dwarf Sprite Sheet 1.3v.png" id="2_mpr68"]

[sub_resource type="AtlasTexture" id="AtlasTexture_s7bn3"]
atlas = ExtResource("2_mpr68")
region = Rect2(0, 64, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2hac7"]
atlas = ExtResource("2_mpr68")
region = Rect2(64, 64, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_e6d4v"]
atlas = ExtResource("2_mpr68")
region = Rect2(128, 64, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qp131"]
atlas = ExtResource("2_mpr68")
region = Rect2(192, 64, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6do27"]
atlas = ExtResource("2_mpr68")
region = Rect2(256, 64, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rvmyp"]
atlas = ExtResource("2_mpr68")
region = Rect2(320, 64, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2nxwx"]
atlas = ExtResource("2_mpr68")
region = Rect2(384, 64, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2r3mv"]
atlas = ExtResource("2_mpr68")
region = Rect2(0, 192, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jccr3"]
atlas = ExtResource("2_mpr68")
region = Rect2(64, 192, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jd3y4"]
atlas = ExtResource("2_mpr68")
region = Rect2(128, 192, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_h6feu"]
atlas = ExtResource("2_mpr68")
region = Rect2(192, 192, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_npdxj"]
atlas = ExtResource("2_mpr68")
region = Rect2(0, 0, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hxvgb"]
atlas = ExtResource("2_mpr68")
region = Rect2(64, 0, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0qy3v"]
atlas = ExtResource("2_mpr68")
region = Rect2(128, 0, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_smfg5"]
atlas = ExtResource("2_mpr68")
region = Rect2(192, 0, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_bdb26"]
atlas = ExtResource("2_mpr68")
region = Rect2(256, 0, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dn8ps"]
atlas = ExtResource("2_mpr68")
region = Rect2(0, 32, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_p1k6s"]
atlas = ExtResource("2_mpr68")
region = Rect2(64, 32, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ir673"]
atlas = ExtResource("2_mpr68")
region = Rect2(128, 32, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_nenbi"]
atlas = ExtResource("2_mpr68")
region = Rect2(192, 32, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_nexad"]
atlas = ExtResource("2_mpr68")
region = Rect2(256, 32, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_grakr"]
atlas = ExtResource("2_mpr68")
region = Rect2(320, 32, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_se7ri"]
atlas = ExtResource("2_mpr68")
region = Rect2(384, 32, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4snat"]
atlas = ExtResource("2_mpr68")
region = Rect2(448, 32, 64, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_d7dqe"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_s7bn3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2hac7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e6d4v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qp131")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6do27")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rvmyp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2nxwx")
}],
"loop": true,
"name": &"Attack",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2r3mv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jccr3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jd3y4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h6feu")
}],
"loop": true,
"name": &"Damage",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_npdxj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hxvgb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0qy3v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_smfg5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bdb26")
}],
"loop": true,
"name": &"Idle",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dn8ps")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p1k6s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ir673")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nenbi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nexad")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_grakr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_se7ri")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4snat")
}],
"loop": true,
"name": &"Run",
"speed": 10.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_5gnn4"]
radius = 7.0
height = 16.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_55jtl"]
radius = 32.0
height = 124.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tt7e2"]
size = Vector2(14.75, 18)

[node name="Enemy" type="CharacterBody2D"]
script = ExtResource("1_55jtl")
speed = 50.0

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(2, -12)
sprite_frames = SubResource("SpriteFrames_d7dqe")
animation = &"Attack"
autoplay = "Idle"
frame = 4
frame_progress = 0.062392

[node name="EnemyHitbox" type="CollisionShape2D" parent="."]
position = Vector2(0, -8)
shape = SubResource("CapsuleShape2D_5gnn4")

[node name="ChaseArea" type="Area2D" parent="."]
position = Vector2(41, -12)

[node name="ChaseHitbox" type="CollisionShape2D" parent="ChaseArea"]
scale = Vector2(3, 0.5)
shape = SubResource("CapsuleShape2D_55jtl")

[node name="AttackArea" type="Area2D" parent="."]
position = Vector2(7, -9)

[node name="AttackHitbox" type="CollisionShape2D" parent="AttackArea"]
position = Vector2(0.625, 0)
shape = SubResource("RectangleShape2D_tt7e2")

[node name="StateTimer" type="Timer" parent="."]

[node name="AttackTimer" type="Timer" parent="."]

[connection signal="body_entered" from="ChaseArea" to="." method="_on_chase_area_body_entered"]
[connection signal="body_exited" from="ChaseArea" to="." method="_on_chase_area_body_exited"]
[connection signal="body_entered" from="AttackArea" to="." method="_on_attack_area_body_entered"]
[connection signal="body_exited" from="AttackArea" to="." method="_on_attack_area_body_exited"]
[connection signal="timeout" from="StateTimer" to="." method="_on_state_timer_timeout"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_attack_timer_timeout"]
